opens for internal nio access in gcloud big query storage